--- a/src/main/resources/com/dam/elias/chat/chat-view.fxml
+++ b/src/main/resources/com/dam/elias/chat/chat-view.fxml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dam.elias.chat.client.gui.controllers.ChatViewController">
+   <children>
+      <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
+         <children>
+            <Label fx:id="nombreChat" text="Nombre Chat" />
+         </children>
+      </HBox>
+      <ScrollPane prefHeight="400.0" prefWidth="200.0">
+         <content>
+            <VBox fx:id="vboxMensajes" prefHeight="400.0" prefWidth="580.0" />
+         </content>
+      </ScrollPane>
+      <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
+         <children>
+            <TextField fx:id="inputMensaje" prefHeight="30.0" prefWidth="500.0" />
+            <Button fx:id="botonEnviar" mnemonicParsing="false" text="Enviar" />
+         </children>
+      </HBox>
+   </children>
+</VBox>
