--- a/src/main/resources/com/dam/elias/chat/login.fxml
+++ b/src/main/resources/com/dam/elias/chat/login.fxml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.dam.elias.chat.gui.controllers.LoginController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dam.elias.chat.client.gui.controllers.LoginController">
+   <children>
+      <Label text="Choose your username">
+         <VBox.margin>
+            <Insets bottom="30.0" top="80.0" />
+         </VBox.margin>
+      </Label>
+      <TextField fx:id="usernameInput">
+         <VBox.margin>
+            <Insets left="20.0" right="20.0" />
+         </VBox.margin>
+      </TextField>
+      <Button fx:id="loginButton" mnemonicParsing="false" onMouseClicked="#attemptLogin" text="login">
+         <VBox.margin>
+            <Insets bottom="40.0" top="25.0" />
+         </VBox.margin>
+      </Button>
+      <Label fx:id="availableLabel" />
+   </children>
+</VBox>
