--- a/src/main/resources/com/dam/elias/chat/main-view.fxml
+++ b/src/main/resources/com/dam/elias/chat/main-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -40,15 +41,21 @@
       <Pane fx:id="panel_abajo_vacio" prefHeight="25.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </bottom>
    <center>
-      <VBox fx:id="vboxPreview" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+      <VBox fx:id="vboxPreview" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_CENTER">
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin></VBox>
    </center>
    <right>
-      <VBox fx:id="vboxChatScreen" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+      <VBox fx:id="vboxChatScreen" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_CENTER" />
    </right>
    <top>
-      <HBox fx:id="menu_top" prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox fx:id="menu_top" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER_RIGHT">
          <children>
-            <Label text="Chat TCP" />
+            <Label fx:id="userNameLabel" alignment="CENTER" contentDisplay="TOP">
+               <padding>
+                  <Insets left="20.0" />
+               </padding></Label>
          </children>
       </HBox>
    </top>
