--- a/src/main/resources/com/dam/elias/chat/chat-view.fxml
+++ b/src/main/resources/com/dam/elias/chat/chat-view.fxml
@@ -22,7 +22,7 @@
       <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
          <children>
             <TextField fx:id="inputMensaje" prefHeight="30.0" prefWidth="500.0" />
-            <Button fx:id="botonEnviar" mnemonicParsing="false" text="Enviar" />
+            <Button fx:id="botonEnviar" mnemonicParsing="false" text="Enviar" onMouseClicked="#sendMessage" />
          </children>
       </HBox>
    </children>
