--- a/src/main/resources/com/dam/elias/chat/online-users-view.fxml
+++ b/src/main/resources/com/dam/elias/chat/online-users-view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
@@ -15,9 +16,14 @@
                <HBox.margin>
                   <Insets />
                </HBox.margin></Label>
-            <Button mnemonicParsing="false" onMouseClicked="#nuevoChat" text="Nuevo Chat">
+            <TextArea fx:id="inputGroupName" maxHeight="-Infinity" prefHeight="100.0" prefWidth="200.0" promptText="Nombre de grupo">
                <HBox.margin>
-                  <Insets left="100.0" />
+                  <Insets left="50.0" />
+               </HBox.margin>
+            </TextArea>
+            <Button mnemonicParsing="false" onMouseClicked="#newChat" text="Nuevo Chat">
+               <HBox.margin>
+                  <Insets left="20.0" />
                </HBox.margin>
             </Button>
          </children>
