--- a/src/main/resources/com/dam/elias/chat/online-users-view.fxml
+++ b/src/main/resources/com/dam/elias/chat/online-users-view.fxml
@@ -4,11 +4,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dam.elias.chat.client.gui.controller.OnlineUsersController">
+<?import javafx.scene.control.TextField?>
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+      prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.dam.elias.chat.client.gui.controller.OnlineUsersController">
    <children>
       <HBox alignment="CENTER" prefHeight="50.0" prefWidth="600.0">
          <children>
@@ -16,11 +18,11 @@
                <HBox.margin>
                   <Insets />
                </HBox.margin></Label>
-            <TextArea fx:id="inputGroupName" maxHeight="-Infinity" prefHeight="100.0" prefWidth="200.0" promptText="Nombre de grupo">
+            <TextField fx:id="inputGroupName" maxHeight="-Infinity" prefHeight="100.0" prefWidth="200.0" promptText="Nombre de grupo">
                <HBox.margin>
                   <Insets left="50.0" />
                </HBox.margin>
-            </TextArea>
+            </TextField>
             <Button mnemonicParsing="false" onMouseClicked="#newChat" text="Nuevo Chat">
                <HBox.margin>
                   <Insets left="20.0" />
