--- a/src/main/resources/com/dam/elias/chat/main-view.fxml
+++ b/src/main/resources/com/dam/elias/chat/main-view.fxml
@@ -9,36 +9,6 @@
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane fx:id="bp_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dam.elias.chat.client.gui.controller.MainController">
-   <left>
-      <VBox fx:id="vb_chat_type" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="35.0" prefWidth="200.0">
-               <children>
-                  <Label text="Tipo de chat" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="35.0" prefWidth="200.0">
-               <children>
-                  <Label text="Privado" textAlignment="CENTER" />
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="0" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="35.0" prefWidth="200.0">
-               <children>
-                  <Label text="Grupos" />
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="0" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="35.0" prefWidth="200.0">
-               <children>
-                  <Label text="Sala comun" />
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="0" />
-               </children>
-            </HBox>
-            <Button mnemonicParsing="false" onMouseClicked="#newChatMenu" text="Nuevo Chat" />
-         </children>
-      </VBox>
-   </left>
    <bottom>
       <Pane fx:id="panel_abajo_vacio" prefHeight="25.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </bottom>
@@ -49,7 +19,7 @@
          </BorderPane.margin></VBox>
    </center>
    <right>
-      <VBox fx:id="vboxChatScreen" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_CENTER" />
+      <VBox fx:id="vboxChatScreen" prefHeight="200.0" prefWidth="400.0" BorderPane.alignment="TOP_CENTER" />
    </right>
    <top>
       <HBox fx:id="menu_top" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER_RIGHT">
@@ -58,6 +28,12 @@
                <padding>
                   <Insets left="20.0" />
                </padding></Label>
+            <Button cancelButton="true" layoutX="30.0" layoutY="23.0" mnemonicParsing="false" onMouseClicked="#setChatView" text="Chats">
+               <HBox.margin>
+                  <Insets left="50.0" right="20.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onMouseClicked="#onlineUsersMenu" text="Online Users" />
          </children>
       </HBox>
    </top>
