--- a/src/main/resources/com/dam/elias/chat/main-view.fxml
+++ b/src/main/resources/com/dam/elias/chat/main-view.fxml
@@ -8,32 +8,35 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="bp_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dam.elias.chat.client.gui.controller.MainController">
+<BorderPane fx:id="bp_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="all_view" stylesheets="@main-view.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dam.elias.chat.client.gui.controller.MainController">
    <bottom>
       <Pane fx:id="panel_abajo_vacio" prefHeight="25.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </bottom>
    <center>
-      <VBox fx:id="vboxPreview" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_CENTER">
+      <VBox fx:id="vboxPreview" prefHeight="200.0" prefWidth="100.0" styleClass="boxes" BorderPane.alignment="TOP_CENTER">
          <BorderPane.margin>
-            <Insets />
+            <Insets bottom="10.0" left="10.0" top="10.0" />
          </BorderPane.margin></VBox>
    </center>
    <right>
-      <VBox fx:id="vboxChatScreen" prefHeight="200.0" prefWidth="400.0" BorderPane.alignment="TOP_CENTER" />
+      <VBox fx:id="vboxChatScreen" prefHeight="200.0" prefWidth="400.0" styleClass="boxes" BorderPane.alignment="TOP_CENTER">
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin></VBox>
    </right>
    <top>
       <HBox fx:id="menu_top" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER_RIGHT">
          <children>
-            <Label fx:id="userNameLabel" alignment="CENTER" contentDisplay="TOP">
-               <padding>
+            <Label fx:id="userNameLabel" alignment="CENTER" contentDisplay="TOP" styleClass="user_name">
+               <HBox.margin>
                   <Insets left="20.0" />
-               </padding></Label>
-            <Button cancelButton="true" layoutX="30.0" layoutY="23.0" mnemonicParsing="false" onMouseClicked="#setChatView" text="Chats">
+               </HBox.margin></Label>
+            <Button cancelButton="true" layoutX="30.0" layoutY="23.0" mnemonicParsing="false" onMouseClicked="#setChatView" stylesheets="@main-view.css" text="Chats">
                <HBox.margin>
                   <Insets left="50.0" right="20.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="online_users_button" mnemonicParsing="false" onMouseClicked="#onlineUsersMenu" text="Online Users" />
+            <Button fx:id="online_users_button" mnemonicParsing="false" onMouseClicked="#onlineUsersMenu" stylesheets="@main-view.css" text="Online Users" />
          </children>
       </HBox>
    </top>
