--- a/src/main/resources/com/dam/elias/chat/message.fxml
+++ b/src/main/resources/com/dam/elias/chat/message.fxml
@@ -5,23 +5,29 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="vbox_all" styleClass="vbox_message" stylesheets="@message.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dam.elias.chat.client.gui.controller.MessageController">
+<VBox fx:id="vbox_all" style="-fx-alignment: left;" styleClass="vbox_message" stylesheets="@message.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dam.elias.chat.client.gui.controller.MessageController">
    <children>
-      <Label fx:id="username" styleClass="name" text="Name" textFill="WHITE">
+      <Label fx:id="username" style="-fx-position-shape: right;" styleClass="my_name" text="Name" textFill="WHITE">
          <VBox.margin>
             <Insets left="5.0" top="5.0" />
          </VBox.margin></Label>
-      <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="350.0" styleClass="hbox_textTime">
+      <HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="350.0" styleClass="hbox_textTime" VBox.vgrow="ALWAYS">
          <children>
-            <HBox fx:id="textBox" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="280.0">
+            <HBox fx:id="textBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="280.0" HBox.hgrow="ALWAYS">
                <children>
                   <Label fx:id="text" text="Text">
                      <HBox.margin>
                         <Insets left="10.0" />
                      </HBox.margin></Label>
                </children>
+               <padding>
+                  <Insets left="10.0" top="10.0" />
+               </padding>
             </HBox>
-            <Label fx:id="time" text="Time" />
+            <Label fx:id="time" alignment="BOTTOM_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Time" HBox.hgrow="ALWAYS">
+               <HBox.margin>
+                  <Insets bottom="10.0" right="10.0" />
+               </HBox.margin></Label>
          </children>
       </HBox>
    </children>
