Mostrar el nombre de usuario del cliente a la derecha en los mensajes

--- a/src/main/resources/com/dam/elias/chat/message.css
+++ b/src/main/resources/com/dam/elias/chat/message.css
@@ -8,3 +8,10 @@
     -fx-background-radius: 10px;
     -fx-label-padding: 5px;
 }
+
+.my_name{
+    -fx-background-color: #4045e5;
+    -fx-background-radius: 10px;
+    -fx-label-padding: 5px;
+    -fx-alignment: center-right;
+}
