--- a/src/main/resources/com/dam/elias/chat/chat-view.fxml
+++ b/src/main/resources/com/dam/elias/chat/chat-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -11,12 +12,15 @@
    <children>
       <HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label fx:id="nombreChat" text="Nombre Chat" />
+            <Label fx:id="nombreChat" text="Nombre Chat">
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin></Label>
          </children>
       </HBox>
       <ScrollPane fx:id="scroll_mensajes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <content>
-            <VBox fx:id="vboxMensajes" prefHeight="400.0" prefWidth="580.0" />
+            <VBox fx:id="vboxMensajes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="580.0" />
          </content>
       </ScrollPane>
       <HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
