--- a/src/main/resources/com/dam/elias/chat/chats-preview.fxml
+++ b/src/main/resources/com/dam/elias/chat/chats-preview.fxml
@@ -11,7 +11,7 @@
    <children>
       <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="80.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label fx:id="label_chat_preview_title" text="Conversaciones">
+            <Label fx:id="label_chat_preview_title" text="My Chats">
                <VBox.margin>
                   <Insets bottom="10.0" top="10.0" />
                </VBox.margin>
