--- a/src/main/resources/com/dam/elias/chat/chat-info.fxml
+++ b/src/main/resources/com/dam/elias/chat/chat-info.fxml
@@ -7,37 +7,38 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="hb_chat_info" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" onMouseClicked="#openChat" prefHeight="50.0" prefWidth="500.0" styleClass="hbox_root" stylesheets="@chat-info.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dam.elias.chat.client.gui.controller.ChatInfoController">
-   <children>
-      <VBox fx:id="vb_info_main" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="250.0" HBox.hgrow="ALWAYS">
-         <children>
-            <HBox fx:id="hb_nombre_hora" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="20.0" prefWidth="250.0">
-               <children>
-                  <Label fx:id="nombre" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Nombre" HBox.hgrow="ALWAYS" />
-                  <Label fx:id="horaFecha" alignment="CENTER_RIGHT" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Hora" HBox.hgrow="ALWAYS" />
-               </children>
-            </HBox>
-            <VBox fx:id="vb_ultimo_mensaje" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="160.0">
-               <children>
-                  <Label fx:id="ultimoMensaje" text="ultimo mensaje">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin></Label>
-                  <Line endX="64.5" startX="-100.0" stroke="#9e9e9e">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </Line>
-               </children>
-            </VBox>
-         </children>
+<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" onMouseClicked="#openChat"
+      prefHeight="50.0" prefWidth="500.0" styleClass="hbox_root" stylesheets="@chat-info.css"
+      xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.dam.elias.chat.client.gui.controller.ChatInfoController">
+   <VBox maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="250.0" HBox.hgrow="ALWAYS">
+      <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="20.0" prefWidth="250.0">
+         <Label fx:id="nombre" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Nombre"
+                HBox.hgrow="ALWAYS"/>
+         <Label fx:id="horaFecha" alignment="CENTER_RIGHT" contentDisplay="CENTER"
+                maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Hora"
+                HBox.hgrow="ALWAYS"/>
+      </HBox>
+      <VBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+            prefHeight="200.0" prefWidth="160.0">
+         <Label fx:id="ultimoMensaje" text="ultimo mensaje">
+            <VBox.margin>
+               <Insets/>
+            </VBox.margin>
+         </Label>
+         <Line endX="64.5" startX="-100.0" stroke="#9e9e9e">
+            <VBox.margin>
+               <Insets top="5.0"/>
+            </VBox.margin>
+         </Line>
       </VBox>
-      <Label fx:id="contadorNoLeidos" alignment="CENTER" styleClass="unread" text="0">
-         <HBox.margin>
-            <Insets right="10.0" />
-         </HBox.margin>
-         <font>
-            <Font size="18.0" />
-         </font></Label>
-   </children>
+   </VBox>
+   <Label fx:id="contadorNoLeidos" alignment="CENTER" styleClass="unread" text="0">
+      <HBox.margin>
+         <Insets right="10.0"/>
+      </HBox.margin>
+      <font>
+         <Font size="18.0"/>
+      </font>
+   </Label>
 </HBox>
